improvement/bugfix: wrap lms-ui-date elements in out lms-ui-date-container div element for easying visible toggle of such element groups

--- a/css/style.less
+++ b/css/style.less
@@ -4057,3 +4057,7 @@ fieldset {
 		border-top: @dotted-line;
 	}
 }
+
+.lms-ui-date-container {
+	display: inline;
+}
